# sllms-framework

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  tool_pack_request.yml
.github/workflows/: ci.yml
docs/: ADDING_CUSTOM_TOOLS.md  ARCHITECTURE.md  BUILTIN_TOOLS.md  EXAMPLE_RECIPES.md  EXTENDING.md  PRODUCTION.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  REPO_STRUCTURE.md  REQUIREMENTS_AND_LIMITATIONS.md  TOOL_PACKS.md  TROUBLESHOOTING.md  USE_CASES.md  USING_SLLMS.md
examples/: README.md  app_embedding.py  dictation_once.py  home_robot_assistant.py  machine_control_demo.py  text_assistant.py  tool_catalog.py  voice_once.py
examples/configs/: api_weather.example.yaml  home_robot.example.yaml  multilingual_spanish.example.yaml
examples/plugins/: desktop_notification_plugin.py  light_control_plugin.py  todo_plugin.py
llm/: __init__.py  engine.py  prompts.py
models/: README.md
plugins/: README.md
scripts/: bootstrap.py  setup.ps1  setup.sh  smoke_test.py
sllms_framework/: __init__.py  cli.py
stt/: __init__.py  audio.py  whisper_cpp.py
templates/sllms_tool_pack_template/: README.md  pyproject.toml
templates/sllms_tool_pack_template/src/sllms_tool_pack_template/: plugin.py
tests/: test_audio_import_fallbacks.py  test_example_configs.py  test_llm_engine.py  test_plugin_loading.py  test_security_and_paths.py  test_stt_imports.py
tools/: __init__.py  base.py  content_tools.py  control_tools.py  info_tools.py  system_tools.py
tts/: __init__.py  piper.py
utils/: __init__.py  config.py  json_utils.py  logging_utils.py  memory.py  platform.py  process_control.py
